rewrote services text. Increased line height on PC and Ipad screens. Fixed profile-subtitle-service position on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,10 @@ a:visited {
     color: var(--text-primary);
 }
 
+strong {
+    color: #F7E2E2;
+    font-size: 1.25em;
+}
 
 /* Navbar */
 
@@ -513,10 +517,6 @@ a:visited {
     display: block;
     padding-right: 100px;
     font-size: 2em;
-    opacity: 0;
-    animation: landingPageAnimation 3s ease forwards;
-    animation-delay: .5s;
-    animation-duration: 1000ms;
     color: var(--bg-secondary);
    
 
@@ -694,7 +694,7 @@ a:visited {
     }
 
     .profile-subtitle-service {
-        margin-left: 15%;
+        margin-left: 27.5%;
     }
 
     .skills {
@@ -840,8 +840,9 @@ a:visited {
     }
 
     .service-info {
-        font-size: .9em;
+        font-size: 1em;
         width: 80%;
+        line-height: 3;
     }
 
     .service-container {
